Bug 77975 - [855GM] X freezes for no apparent reason and reproducability
Summary: [855GM] X freezes for no apparent reason and reproducability
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Antti Koskipaa
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-26 17:24 UTC by CarlEitsger
Modified: 2017-07-24 22:54 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
X process in htop (12.18 KB, image/jpeg)
2014-04-26 17:24 UTC, CarlEitsger
no flags Details
VGA with pointer (142.49 KB, image/jpeg)
2014-04-26 17:26 UTC, CarlEitsger
no flags Details
missing pointer on LVDS (46.04 KB, image/jpeg)
2014-04-26 17:27 UTC, CarlEitsger
no flags Details
backtrace of X process (3.22 KB, text/plain)
2014-04-26 17:28 UTC, CarlEitsger
no flags Details
stack of the X process (211 bytes, text/plain)
2014-04-26 17:28 UTC, CarlEitsger
no flags Details

Description CarlEitsger 2014-04-26 17:24:39 UTC
Created attachment 98046 [details]
X process in htop

(this is orignating from https://bugs.freedesktop.org/show_bug.cgi?id=77351#c28 )

With driver version 
(II) intel(0): SNA compiled from 2.99.911-88-g58a757b
I experienced a *freeze* of keyboard (even numlock LED did not respond to numlock key), mouse cursor and any screen change (old image is displayed) at not good reproducible conditions. I did not recognize a pattern when exactly it happens  (it occured only three times, I think it was never in idle but when starting a big program or doing some work inside a program). 

Access to the machine via ssh and shutdown or kill of the X server is possible.

I had a look in the logs (Xorg.0.log and my system's journalctl) but did not find any suspicious entry just before/at the freeze.

After this I had changed back again to the old version 2.99.910 for two days and I did not experience a freeze anymore (as I never did up to last week). Yes, the freezes may still have been caused by something else and randomness may have caused no freezes since two days.

NEW:  
Tested the version 58a757b again since one day and got a freeze today. Attachments are from this one. Note that the freeze occured while I was running a program under another user account (via `xhost +LOCAL:`   and  `su username`). However, I remeber that one of the first freezes was while I was working with a program under my user account. 

Observation 1: X was still consuming a little bit of CPU (see htop attachment) during the freeze.
Observation 2: Sound from a mp3 playing in vlc was continuing to play through the speakers.
Observation 3: after a kill of X (along with all programs) and relogin everything is fine again.

By chance I saw that during the freeze the mouse cursor was missing on my LVDS although it should have been shown if I see correctly (see images attached)(note that my external display is 1280x1024 and the LVDS is only 1024x768).

Attached also the requested stack and backtrace.
Comment 1 CarlEitsger 2014-04-26 17:26:54 UTC
Created attachment 98047 [details]
VGA with pointer
Comment 2 CarlEitsger 2014-04-26 17:27:34 UTC
Created attachment 98048 [details]
missing pointer on LVDS
Comment 3 CarlEitsger 2014-04-26 17:28:16 UTC
Created attachment 98049 [details]
backtrace of X process
Comment 4 CarlEitsger 2014-04-26 17:28:36 UTC
Created attachment 98050 [details]
stack of the X process
Comment 5 Chris Wilson 2014-04-27 07:40:59 UTC
Thanks!

commit 11cc397cb1cded40f7ab43c1add3fd00b97c6bdc
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Apr 27 07:55:09 2014 +0100

    sna: Preallocate cursors
    
    We need to avoid all allocations within the signal handlers, so
    preallocate the cursor structs.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77975
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

commit 9417f13cc4074ea6e5dad88e054337e93b461a4c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Apr 27 07:55:09 2014 +0100

    sna: Preallocate pwrite scratch buffer for old fashioned cursor updates
    
    We need to avoid all allocations within the signal handlers, so
    preallocate the transfer buffer.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=77975
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 6 CarlEitsger 2014-04-27 14:00:28 UTC
This was fast, thanks Chris!   However, new problem (X restarts): bug 78002


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.