sna: Preallocate cursors

We need to avoid all allocations within the signal handlers, so
preallocate the cursor structs.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77975
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>